Fix bug in introspections when properties are of mixed types (#8451)